FE fix bug
input search too large

--- a/react-frontend/src/index.css
+++ b/react-frontend/src/index.css
@@ -389,3 +389,7 @@ svg {
 .table-transparent {
     --bs-table-bg: transparent;
 }
+
+.noFound {
+    word-break: break-all;
+}
